# Maximum-Clique-Finding

./: .gitignore  CMakeLists.txt  main.cpp  max_clique.csv  readme.md
include/: max_clique_bnb.h  max_clique_tabu_search.h
src/: max_clique_bnb.cpp  max_clique_tabu_search.cpp
